Correct frontend by api-gen
