# MangaST_1_11/FrontMangaST/src/app/services/models.ts
@@ -6,11 +6,15 @@ export { Category } from './models/category';
 export { ChangePasswordRequest } from './models/change-password-request';
 export { ChapterResponse } from './models/chapter-response';
 export { ChaptersRequest } from './models/chapters-request';
+export { CommentRequest } from './models/comment-request';
+export { CommentResponse } from './models/comment-response';
+export { EditCommentRequest } from './models/edit-comment-request';
 export { ForgotPasswordRequest } from './models/forgot-password-request';
 export { MangaRequest } from './models/manga-request';
 export { MangaResponse } from './models/manga-response';
 export { NewPasswordRequest } from './models/new-password-request';
 export { PageResponseMangaResponse } from './models/page-response-manga-response';
+export { RatingRequest } from './models/rating-request';
 export { RegisterRequest } from './models/register-request';
 export { RegisterResponse } from './models/register-response';
 export { UpdateMangaRequest } from './models/update-manga-request';
