# MangaST_1_11/FrontMangaST/src/app/services/models/comment-response.ts
@@ -1,0 +1,10 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface CommentResponse {
+  id?: number;
+  message?: string;
+  nickname?: string;
+  userCover?: Array<string>;
+  userId?: number;
+  userPageId?: string;
+}
