# MangaST_1_11/FrontMangaST/src/app/services/models/edit-comment-request.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface EditCommentRequest {
+  commentId?: number;
+  editContent?: string;
+}
