# MangaST_1_11/FrontMangaST/src/openapi/openapi.json
@@ -65,6 +65,36 @@
         }
       }
     },
+    "/rating/addRating": {
+      "post": {
+        "tags": [
+          "rating-controller"
+        ],
+        "operationId": "rateManga",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/RatingRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/mangaList/addToFavorite/{manga-id}": {
       "post": {
         "tags": [
@@ -85,6 +115,36 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/comment/addComment": {
+      "post": {
+        "tags": [
+          "comment-controller"
+        ],
+        "operationId": "addComment",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/CommentRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
           }
         }
       }
@@ -838,6 +898,36 @@
         }
       }
     },
+    "/comment/editComment": {
+      "patch": {
+        "tags": [
+          "comment-controller"
+        ],
+        "operationId": "updateComment",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/EditCommentRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/user/isAdmin": {
       "get": {
         "tags": [
@@ -1214,40 +1304,6 @@
         }
       }
     },
-    "/categories/findCategoriesByManga": {
-      "get": {
-        "tags": [
-          "Categories"
-        ],
-        "operationId": "findCategoriesByMangaId",
-        "parameters": [
-          {
-            "name": "mangaId",
-            "in": "query",
-            "required": true,
-            "schema": {
-              "type": "integer",
-              "format": "int32"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Category"
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/mangaList/deleteFromFavorite/{manga-id}": {
       "delete": {
         "tags": [
@@ -1268,6 +1324,37 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/comment/delete/{commentId}": {
+      "delete": {
+        "tags": [
+          "comment-controller"
+        ],
+        "operationId": "deleteComment",
+        "parameters": [
+          {
+            "name": "commentId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
+            }
           }
         }
       }
@@ -1299,6 +1386,31 @@
   },
   "components": {
     "schemas": {
+      "RatingRequest": {
+        "type": "object",
+        "properties": {
+          "mangaId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "userRate": {
+            "type": "number",
+            "format": "double"
+          }
+        }
+      },
+      "CommentRequest": {
+        "type": "object",
+        "properties": {
+          "mangaId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "content": {
+            "type": "string"
+          }
+        }
+      },
       "ChapterResponse": {
         "type": "object",
         "properties": {
@@ -1543,6 +1655,35 @@
           }
         }
       },
+      "CommentResponse": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "message": {
+            "type": "string"
+          },
+          "userId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "nickname": {
+            "type": "string"
+          },
+          "userPageId": {
+            "type": "string"
+          },
+          "userCover": {
+            "type": "array",
+            "items": {
+              "type": "string",
+              "format": "byte"
+            }
+          }
+        }
+      },
       "MangaResponse": {
         "type": "object",
         "properties": {
@@ -1591,6 +1732,22 @@
           },
           "description": {
             "type": "string"
+          },
+          "rating": {
+            "type": "number",
+            "format": "double"
+          },
+          "categoryList": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/Category"
+            }
+          },
+          "comments": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/CommentResponse"
+            }
           }
         }
       },
@@ -1672,6 +1829,18 @@
           }
         }
       },
+      "EditCommentRequest": {
+        "type": "object",
+        "properties": {
+          "commentId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "editContent": {
+            "type": "string"
+          }
+        }
+      },
       "UserResponse": {
         "type": "object",
         "properties": {
@@ -1720,10 +1889,10 @@
               "format": "byte"
             }
           },
-          "activated": {
+          "banned": {
             "type": "boolean"
           },
-          "banned": {
+          "activated": {
             "type": "boolean"
           }
         }
